timetable page - page set to 100% (instead of 1800px height), fixed group button alignment

--- a/public_html/pages/timetable/timetable.css
+++ b/public_html/pages/timetable/timetable.css
@@ -50,7 +50,6 @@
 }
 
 #section-content {
-    max-width: 1280px;
     height: 100%;
     /* temp border */
     border: solid 1px black;
@@ -297,7 +296,7 @@
         flex-direction: column;
     }
 
-    .btn-group button {
+    #section-light .btn {
         border-radius: 0;
     }
 }
